unpackaged/objects/Strategic_Goal__c.object
<CustomObject>
  <fields>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Strategic Goals</relationshipLabel>
    <relationshipName>Strategic_Goals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Focus_Area__c</fullName>
    <label>Focus Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>CAD/CAM</fullName>
        </value>
        <value>
          <fullName>Imaging</fullName>
        </value>
        <value>
          <fullName>DS Lab</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Goal_Detail__c</fullName>
    <label>Goal Detail</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
  </fields>
  <label>Strategic Goal</label>
  <nameField>
    <label>Strategic Goal Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Strategic Goals</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>